--- a/react-todolist/package.json
+++ b/react-todolist/package.json
@@ -38,8 +38,11 @@
   ],
   "dependencies": {
     "@modern-js/runtime": "^1.0.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "todomvc-app-css": "^2.4.2",
+    "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
     "@modern-js/app-tools": "^1.0.0",
