--- a/performance-optim/package.json
+++ b/performance-optim/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lazy-load-image-component": "^1.5.4",
     "sass": "^1.50.0",
     "scss": "^0.2.4"
   },
