--- a/final-project-game/package.json
+++ b/final-project-game/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "6",
     "sass": "^1.50.1",
     "tailwindcss": "^3.0.24"
   },
