--- a/final-project-game/package.json
+++ b/final-project-game/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "sass": "^1.50.1",
     "tailwindcss": "^3.0.24"
