Retrofitted enemy movement logic

--- a/final-project-game/src/data/level/spawnConfig.json
+++ b/final-project-game/src/data/level/spawnConfig.json
@@ -8,7 +8,9 @@
           "low": 4000,
           "high": 8000
         },
-        "maxCount": 3
+        "maxCount": 3,
+        "fireControl": "Direct",
+        "movement": "XAxis"
       }
     ]
   }
