--- a/final-project-game/src/data/level/spawnConfig.json
+++ b/final-project-game/src/data/level/spawnConfig.json
@@ -27,5 +27,58 @@
         "aircraftId": 1
       }
     ]
+  },
+  {
+    "id": 2,
+    "enemies": [
+      {
+        "id": 1,
+        "rate": {
+          "low": 1000,
+          "high": 4000
+        },
+        "maxCount": 2,
+        "fireControl": "Direct",
+        "movement": "XAxis",
+        "weaponId": 4,
+        "aircraftId": 1
+      },
+      {
+        "id": 2,
+        "rate": {
+          "low": 5000,
+          "high": 8000
+        },
+        "maxCount": 2,
+        "fireControl": "Tracking",
+        "movement": "Direct",
+        "weaponId": 2,
+        "aircraftId": 1
+      },
+      {
+        "id": 3,
+        "rate": {
+          "low": 8000,
+          "high": 10000
+        },
+        "maxCount": 2,
+        "fireControl": "Trishot",
+        "movement": "XAxis",
+        "weaponId": 1,
+        "aircraftId": 1
+      },
+      {
+        "id": 4,
+        "rate": {
+          "low": 4000,
+          "high": 8000
+        },
+        "maxCount": 1,
+        "fireControl": "Trishot",
+        "movement": "Direct",
+        "weaponId": 3,
+        "aircraftId": 1
+      }
+    ]
   }
 ]
